Improved how players are moving on the pitch and how the ball is kicked.